examples/test/testpolicy4367.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4367
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key37: value43
      key49: value38
      key7: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value7
          key42: value33
          key23: value37
      podSelector:
        matchLabels:
          key34: value28
          key46: value18
          key12: value46
